add index listing

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,6 +19,11 @@
 	border-radius: 5px; 
 }
 
+.bg{
+	background-color: #eee;
+	border-radius: 5px; 
+}
+
 .bgcolor{
     left: -10;
     bottom: 0;
