add edit and delete recipe method

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -20,7 +20,7 @@
 
   <!-- Copyright -->
   <div class="footer-copyright text-center py-3 text" >© 2020 Copyright:
-    <a href="https://boots-recipes.herokuapp.com/" class="text"> boots-recipes.herokuapp.com</a>
+    <a href="http://web-recipes.herokuapp.com/" class="text"> web-recipes.herokuapp.com</a>
   </div>
   <!-- Copyright -->
 
