--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -75,3 +75,31 @@
 	background-color: #070000!important;
 	text-decoration: none;
 }
+
+.description{
+	margin-top: 15px;
+}
+
+.well a{
+	color: #073b15; 
+}
+
+.img-circle
+{
+	border-radius: 50%; 
+}
+
+.chef_info{
+	margin-top: 10px;
+}
+
+.colormatch a{
+	color: #073b15; 
+}
+
+.recipe-actions{
+	
+	a{
+		color: #fff;
+	}
+}
