--- a/app/views/chefs/_form.html.erb
+++ b/app/views/chefs/_form.html.erb
@@ -38,7 +38,7 @@
 		</div>
 		<div class="form-group">
 			<div class="col-md-offset-2 col-md-10">
-				<%= f.submit "Create my account", class: "btn btn-primary btn-lg btn-xlarge" %>
+				<%= f.submit(@chef.new_record? ? "Create my account" : "Update", class: "btn btn-primary btn-lg btn-xlarge") %>
 			</div>
 		</div>
 	<% end %>
