--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -23,8 +23,10 @@
 			</p>
 		</div>
 		<div class="recipe-actions ">
-			<%= link_to "Edit this recipe", edit_recipe_path(@recipe), class: "btn btn-xs btn-warning " %>
-			<%= link_to "Delete this recipe", recipe_path(@recipe), method: :delete, class: "btn btn-xs btn-danger", data: { confirm: "Are you sure you want to delete this recipe?"} %>
+			<% if logged_in? && current_chef==@recipe.chef %>
+				<%= link_to "Edit this recipe", edit_recipe_path(@recipe), class: "btn btn-xs btn-warning " %>
+				<%= link_to "Delete this recipe", recipe_path(@recipe), method: :delete, class: "btn btn-xs btn-danger", data: { confirm: "Are you sure you want to delete this recipe?"} %>
+			<% end %>
 			<%= link_to "Return to recipes", recipes_path, class: "btn btn-xs btn-primary" %>
 		</div>
 
