--- a/app/views/chefs/index.html.erb
+++ b/app/views/chefs/index.html.erb
@@ -12,6 +12,9 @@
 					<li><%= link_to gravatar_for(chef), chef_path(chef) %></li>
 					<li class="chef-title"><%= link_to chef.chefname.capitalize, chef_path(chef) %></li>
 					<li><small><%= pluralize(chef.recipes.count, "recipe") if chef.recipes %></small></li>
+					<% if logged_in? && current_chef.admin? && current_chef!=chef %>
+						<li><%= link_to "Delete this chef", chef_path(chef), method: :delete %></li>
+					<% end %>
 				</div>
 			</div>
 		</ul>
