--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -47,7 +47,7 @@
         <li class="nav-item dropdown" >
           
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color:#fff;">
-            Chef <%= chef.chefname %>
+            <%= "Admin" if current_chef.admin? %> <%= chef.chefname %> 
           </a>
 
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
