--- a/app/views/recipes/_recipe.html.erb
+++ b/app/views/recipes/_recipe.html.erb
@@ -15,7 +15,7 @@
 				<p>Ingredients: <%= render recipe.ingredients %></p>
 			<% end %>
 			<p>
-				<span class="quiet"><small>Created  <%= time_ago_in_words(recipe.created_at) %>  ago by chef <%= recipe.chef.chefname.capitalize %></small></span>
+				<span class="quiet"><small>Created  <%= time_ago_in_words(recipe.created_at) %>  ago by chef <%= recipe.chef.chefname.capitalize %> | <%= pluralize(recipe.comments.count, 'Comment') %> </small></span>
 			</p>
 			<% if logged_in? && (current_chef==recipe.chef or current_chef.admin?) %>
 				<%= link_to "Edit this recipe", edit_recipe_path(recipe), class: "btn btn-xs btn-warning " %>
