--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -39,3 +39,55 @@
 </div>
 
 <br><br>
+
+<% if logged_in? %>
+	
+<div class="row">
+<div class="col-md-12" style="padding-left: 300px">
+	<h3>Comments</h3>
+	<hr />
+	<%= form_for([@recipe, @comment], :html => {class: "form-horizontal", role: "form"}) do |f| %>
+
+		
+		<div class="form-group">
+			<div class="control-label col-md-2">
+				<%= f.label :description, "Comment" %>
+			</div>
+			<div class="col-md-8">
+				<%= f.text_area :description, rows: 4, class: "form-control",placeholder: "Enter Comment" %>
+			</div>
+		</div>
+		
+		<div class="form-group">
+			<div class="col-md-offset-2 col-md-10">
+				<%= f.submit "Submit Comment", class: "btn btn-primary btn-lg btn-xlarge" %>
+			</div>
+		</div>
+	<% end %>
+	<hr/>
+	</div>
+</div>
+
+<% end %>
+<% if @recipe.comments.count !=0 %>
+	<div class="row" >
+		<div class="col-md-8 col-md-offset-2">
+			<h3>Prior Comments:</h3>
+				<br>
+				<div id="messages" >
+					<br>
+						<%= render partial: 'comments/comments', object: @comments %>
+
+				</div>
+				<br>
+		</div>
+	</div>
+<% else %>
+	<div class="row">
+
+		<div class="col-md-8 col-md-offset-2" >
+			<h3>No comments</h3>
+		</div>
+
+	</div>
+<% end %>
